test/ppx_irmin/deriver/errors/unsupported_type_arrow.expected
File "unsupported_type_arrow.ml", line 1, characters 9-20:
Error: ppx_irmin: function type encountered: unit -> int. Functions are not Irmin-serialisable.
